# axion

./: README.md
server/Analytics/: dockerfile  pyproject.toml
server/Analytics/app/: main.py
server/Analytics/app/callback/: callback.py  callback_log.py
server/Analytics/app/config/: database.py
server/Analytics/app/models/: logs.py
server/Analytics/app/routes/: logs_reciever.py  logs_routes.py
server/Analytics/app/schema/: schemas.py
server/Analytics/app/utils/: reciever.py
server/Notification/: dockerfile  openapi.json  pyproject.toml
server/Notification/app/: consumer.py  db.py  main.py  otp.py
server/Notification/app/callback/: callback.py  callback_send_email.py  callback_send_notification.py  callback_send_sms.py  callback_send_ws_notification.py
server/Notification/app/data/: axion-6a492-firebase-adminsdk-fbsvc-b2d355fda3.json
server/Notification/app/models/: models.py
server/Notification/app/redundant/: consumer.py
server/Notification/app/routes/: REST.py  WS.py  test.py
server/Notification/app/utils/: gen_email.py  reciever.py  sender.py
server/Records/: dockerfile  openapi.json  pyproject.toml  requirements.txt
server/Records/app/: main.py
server/Records/app/ax_types/: Labs.py  allergyIntolerance.py  encounter.py  immunization.py  medications.py  observation.py  parent.py  procedure.py  util.py
server/Records/app/callback/: authenticate_session.py  callBack.py
server/Records/app/middleware/: auth.py  logging.py
server/Records/app/models/: models.py  updated_models.py  upload_models.py
server/Records/app/routes/: GQL.py  REST.py
server/Records/app/routes/GQL/: Doctor.py  (+2 more)
server/Records/app/test/: test_reciever.py  test_sender.py  test_utils.py
server/Records/app/utils/: load_to_redis.py  logging.py  sender.py
server/Security/: dockerfile  openapi.json  pyproject.toml  requirements.txt
server/Security/app/: main.py  requirements.txt
server/Security/app/callback/: authenticate_session.py  callBack.py
server/Security/app/consumer_proceses_callback/: authenticate_session.py  callBack.py
server/Security/app/models/: models.py  user.py
server/Security/app/routes/: login.py  otp.py  signUp.py  user.py
server/Security/app/tests/: test_delete_profile.py  test_gen_tokens.py  test_get_profile.py  test_reset_pw.py
server/Security/app/utils/: authenticate_user.py  delete_profile.py  gen_tokens.py  get_profile.py  reciever.py  redis.py  reset_pw.py  sender.py  signIn_user.py
server/shared/: pyproject.toml
server/shared/keys/: private.pem
server/shared/shared.egg-info/: PKG-INFO  SOURCES.txt
server/shared/utils/: fhir_reader.py
server/shared/utils/Data Models/: patient.py
server/shared/utils/auth/: public.pem  token_validator.py
server/shared/utils/logging/: logger.py
server/shared/utils/que/: p.py  sender.py  test.py
(+568 files in other folders)
