[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["RavinduJS <110709934+RavinduJS@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
pymongo = {extras = ["srv"], version = "^4.11.2"}

[tool.poetry.scripts]
dev = 'app.main:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
