[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["RavinduJS <110709934+RavinduJS@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.scripts]
dev = 'app.main:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
