[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["RavinduJS <110709934+RavinduJS@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.6"}

[tool.poetry.scripts]
dev = 'uvicorn app.main:app --reload'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
