[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["RavinduJS <110709934+RavinduJS@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.6"}
pymongo = "^4.10.1"
argon2-cffi = "^23.1.0"
authlib = "^1.4.1"


[tool.poetry.scripts]
dev = 'app.main:main'

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
