[project]
name = "shared"
version = "0.1.0"
description = "shared funtions and classes"
authors = [
    {name = "Ravindu Senaratne"}
]
packages = [{ include = "shared" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
